# lowio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt
include/lowio/: lowio.hpp
src/: CMakeLists.txt  config.hpp.in  lowio.cpp  lowio_unix.cpp  lowio_win.cpp
test/: CMakeLists.txt  common.hpp  fixture.cpp  fixture.hpp  handle.cpp  main.cpp  openclose.cpp  output.cpp  parse_flags.cpp  pch.cpp
test_package/: CMakeLists.txt
